--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -72,35 +72,59 @@
       <!-- Icon Rail Sidebar -->
       <aside class="icon-rail-sidebar" id="iconRailSidebar">
         <div class="sidebar-toggle-wrapper">
-          <button class="sidebar-toggle" id="sidebarToggle" aria-label="Toggle sidebar">
+          <button
+            class="sidebar-toggle"
+            id="sidebarToggle"
+            aria-label="Toggle sidebar"
+          >
             <i class="bi bi-chevron-right"></i>
           </button>
         </div>
 
         <nav class="sidebar-nav">
-          <div class="nav-item active" data-page="search" data-tooltip="Search Library">
+          <div
+            class="nav-item active"
+            data-page="search"
+            data-tooltip="Search Library"
+          >
             <i class="nav-icon bi bi-search"></i>
             <span class="nav-label">Search</span>
           </div>
 
-          <div class="nav-item" data-page="discover" data-tooltip="Discover Insights">
+          <div
+            class="nav-item"
+            data-page="discover"
+            data-tooltip="Discover Insights"
+          >
             <i class="nav-icon bi bi-lightbulb"></i>
             <span class="nav-label">Discover</span>
           </div>
 
-          <div class="nav-item" data-page="analytics" data-tooltip="View Analytics">
+          <div
+            class="nav-item"
+            data-page="analytics"
+            data-tooltip="View Analytics"
+          >
             <i class="nav-icon bi bi-graph-up"></i>
             <span class="nav-label">Analytics</span>
           </div>
 
           <div class="nav-divider"></div>
 
-          <div class="nav-item" data-page="topic-graph" data-tooltip="Topic Graph">
+          <div
+            class="nav-item"
+            data-page="topic-graph"
+            data-tooltip="Topic Graph"
+          >
             <i class="nav-icon bi bi-diagram-3"></i>
             <span class="nav-label">Topic Graph</span>
           </div>
 
-          <div class="nav-item" data-page="entity-graph" data-tooltip="Entity Graph">
+          <div
+            class="nav-item"
+            data-page="entity-graph"
+            data-tooltip="Entity Graph"
+          >
             <i class="nav-icon bi bi-diagram-2"></i>
             <span class="nav-label">Entity Graph</span>
           </div>
