--- a/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
+++ b/ts/packages/agents/browser/src/extension/views/pageKnowledge.html
@@ -48,15 +48,7 @@
           <h6 class="mb-0"><i class="bi bi-globe"></i> Current Page</h6>
           <div class="btn-group btn-group-sm">
             <button id="extractKnowledge" class="btn btn-primary">
-              <i class="bi bi-file-bar-graph"></i> Extract
-            </button>
-            <button
-              id="saveKnowledge"
-              class="btn btn-outline-secondary"
-              disabled
-              title="Extract knowledge first"
-            >
-              <i class="bi bi-floppy-fill"></i>
+              <i class="bi bi-file-bar-graph"></i> Extract & Save
             </button>
             <button
               id="indexPage"
