--- a/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
+++ b/ts/packages/agents/browser/src/extension/views/knowledgeLibrary.html
@@ -72,49 +72,29 @@
       <!-- Icon Rail Sidebar -->
       <aside class="icon-rail-sidebar" id="iconRailSidebar">
         <nav class="sidebar-nav">
-          <div
-            class="nav-item active"
-            data-page="search"
-            title="Search"
-          >
+          <div class="nav-item active" data-page="search" title="Search">
             <i class="nav-icon bi bi-search"></i>
             <span class="nav-label">Search</span>
           </div>
 
-          <div
-            class="nav-item"
-            data-page="discover"
-            title="Discover"
-          >
+          <div class="nav-item" data-page="discover" title="Discover">
             <i class="nav-icon bi bi-lightbulb"></i>
             <span class="nav-label">Discover</span>
           </div>
 
-          <div
-            class="nav-item"
-            data-page="analytics"
-            title="Analytics"
-          >
+          <div class="nav-item" data-page="analytics" title="Analytics">
             <i class="nav-icon bi bi-graph-up"></i>
             <span class="nav-label">Analytics</span>
           </div>
 
           <div class="nav-divider"></div>
 
-          <div
-            class="nav-item"
-            data-page="topic-graph"
-            title="Topic Graph"
-          >
+          <div class="nav-item" data-page="topic-graph" title="Topic Graph">
             <i class="nav-icon bi bi-diagram-3"></i>
             <span class="nav-label">Topic Graph</span>
           </div>
 
-          <div
-            class="nav-item"
-            data-page="entity-graph"
-            title="Entity Graph"
-          >
+          <div class="nav-item" data-page="entity-graph" title="Entity Graph">
             <i class="nav-icon bi bi-diagram-2"></i>
             <span class="nav-label">Entity Graph</span>
           </div>
