Using YAML for web macros

--- a/ts/packages/agents/browser/src/extension/views/pageMacros.html
+++ b/ts/packages/agents/browser/src/extension/views/pageMacros.html
@@ -139,5 +139,6 @@
     <script src="../vendor/prism/prism.js"></script>
     <script src="../vendor/prism/prism-typescript.js"></script>
     <script src="../vendor/prism/prism-json.js"></script>
+    <script src="../vendor/prism/prism-yaml.js"></script>
   </body>
 </html>
