--- a/ts/packages/agents/browser/src/extension/views/topicGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/topicGraphView.html
@@ -145,6 +145,31 @@
               >
                 <i class="bi bi-download"></i>
               </button>
+              <button
+                id="exportJsonButton"
+                class="btn btn-outline-success btn-sm"
+                title="Export cytoscape JSON"
+              >
+                <i class="bi bi-file-earmark-code"></i>
+              </button>
+              <button
+                id="invalidateCacheButton"
+                class="btn btn-outline-warning btn-sm"
+                title="Clear topic cache"
+              >
+                <i class="bi bi-arrow-clockwise"></i>
+              </button>
+              <div class="form-check form-switch ms-2" style="display: inline-block;">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="prototypeMode"
+                  title="Enable prototype rendering mode"
+                >
+                <label class="form-check-label" for="prototypeMode" style="font-size: 12px;">
+                  Prototype Mode
+                </label>
+              </div>
             </div>
           </div>
         </div>
