--- a/ts/packages/agents/browser/src/extension/views/entityGraphView.html
+++ b/ts/packages/agents/browser/src/extension/views/entityGraphView.html
@@ -65,6 +65,11 @@
               <h1 class="entity-name" id="entityName">Select an Entity</h1>
               <div class="entity-type-badge" id="entityType"></div>
             </div>
+            <button
+              id="closeEntitySidebar"
+              class="btn-close"
+              aria-label="Close"
+            ></button>
           </div>
 
           <div class="entity-overview">
@@ -149,6 +154,7 @@
                 <i class="bi bi-download"></i>
               </button>
             </div>
+
           </div>
 
           <!-- Loading State -->
